# jssp_openenv

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  run.py
src/jssp_openenv/: client.py  examples.py  gantt.py  models.py  policy.py  solver.py
src/jssp_openenv/server/: app.py  jssp_environment.py
tests/: test_models.py
